k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapi-service
spec:
  selector:
    app: dotnetapi
  type: LoadBalancer
  ports:
  - name: dotnetapi-service
    port: 80
    targetPort: 80
