k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-webapi
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dotnetapi-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/swagger"
        backend:
          service:
            name: dotnetapi-service
            port:
              number: 8080
